# python-project-83

./: .env  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: ci.yml  sonar.yml
hexlet_code.egg-info/: PKG-INFO  requires.txt
page_analyzer/: app.py  database.py  parser.py  url_normalizer.py
page_analyzer/templates/: index.html  layout.html  show_url.html  urls.html
page_analyzer/templates/urls/: index.html  show.html
