[project]
name = "hexlet-code"
version = "0.1.0"
requires-python = ">=3.8,<4.0"
dependencies = [
  "flask",
  "gunicorn",
  "psycopg2-binary>=2.9.6",
  "python-dotenv",
  "validators",
  "requests",
  "beautifulsoup4"
]

[tool.setuptools.packages.find]
where = ["page_analyzer"]
include = ["page_analyzer*"]